files/foodie3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: foodie3
  name: foodie3
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: foodie3
  template:
    metadata:
      labels:
        app: foodie3
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
status:
