files/noscheduler-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: noscheduler-busybox
spec:
  containers:
  - name: busybox
    image: busybox
    args:
    - sleep
    - "1000000"
  # Make sure you specify the node name here. This will bypass the scheduler.
  nodeName: k8s-thirdcp
