files/review6-unprivileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: securityreview
spec:
  securityContext:
    runAsUser: 2100
  containers:
  - name:  webguy
    image: nginxinc/nginx-unprivileged
    ports:
    - containerPort: 8080
    securityContext:
      runAsUser: 3000
      allowPrivilegeEscalation: false
