files/foodie3-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodie3-loadbalancer
spec:
  selector:
    app: foodie3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
