files/review2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: break2-nodeport
spec:
  type: NodePort
  selector:
    app: break2
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 80
