files/webone.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webone
  # Make sure this label corresponds to the selector of the service
  labels:
    app: webone
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
  nodeSelector:
    system: secondcp
---
apiVersion: v1
kind: Service
metadata:
  name: webone-svc
spec:
  type: NodePort
  selector:
    app: webone
  ports:
  # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
  - port: 80
    targetPort: 80
