files/ingress-web-one-two.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web-one-two
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: www.webone.com
    http:
      paths:
      - backend:
          service:
            # Use the service name, not the pod name.
            name: webone-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: www.webtwo.com
    http:
      paths:
      - backend:
          service:
            name: webtwo-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
